--- a/RTL/pllmain.cmp
+++ b/RTL/pllmain.cmp
@@ -23,6 +23,7 @@ component pllmain
 		c1		: OUT STD_LOGIC ;
 		c2		: OUT STD_LOGIC ;
 		c3		: OUT STD_LOGIC ;
+		c4		: OUT STD_LOGIC ;
 		locked		: OUT STD_LOGIC 
 	);
 end component;
